--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 								   </div>
 							   </a>
-							   <a href="https://www.facebook.com/sirrshirniyyatevi" target="_blank" class="list-group-item bg-light ">
+							   <a href="https://instagram.com/sirr_cake_house?igshid=wjt6hxyup9t6 " target="_blank" class="list-group-item bg-light ">
 								   <div class="d-flex align-items-center">
 									   <div>
 										   <img src="img/Screenshot_2.png" width="50" height="50" class="rounded-circle" alt="">
