--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										   <img src="img/Screenshot_3.png" width="50" height="50" class="rounded-circle" alt="">
 									   </div>
 									   <div class="ml-2">
-										   <div class="h5 mb-n1 text-dark">
+										   <div class="h5 text-dark">
 											   Bizə whatsappda yazın
 										   </div>
 										   <div class="text-muted">
